syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.ched";
option java_outer_classname = "App";
//service

service AppService{

    rpc deleteApp(DeleteRequest) returns (DeleteResponse);

}

message DeleteRequest{
    string code = 1;
}

message DeleteResponse{
    string status = 1;
}